# Pacioli

./: .deepsource.toml  .env.example  .gitignore  .gitleaks.toml  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRYPTO_ACCOUNTING_IMPLEMENTATION.md  CURRENCY_ARCHITECTURE.md  CURRENCY_IMPLEMENTATION_GUIDE.md  DEPLOYMENT.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  REPOSITORY_SPLIT_PLAN.md  SECURITY.md  eslint.config.js  hardhat.config.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/: CODEOWNERS
contracts/: MinimalERC20.sol  SimpleStorage.sol
docs/: Gemfile  POLKADOT_REFERENCE.md  README.md  _config.yml  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: .gitkeep  20250101000001_create_profiles.sql  20250101000002_create_accounts.sql  20250101000003_create_transactions.sql  20250101000004_create_sync_status.sql  20250101000005_create_currencies.sql  20250101000006_create_exchange_rates.sql  20250101000007_create_account_settings.sql  20250101000008_add_currency_conversion_to_transactions.sql  20250101000009_create_currencies_mvp.sql
src-tauri/resources/token-lists/: README.md  astar-tokens.json  moonbeam-tokens.json  moonriver-tokens.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: backup.rs  export.rs  mod.rs
src-tauri/src/api/price_feeds/: coingecko.rs  fixer.rs  mod.rs
src-tauri/src/core/: address.rs  currency.rs  currency_service.rs  encryption.rs  mod.rs  substrate_currency.rs
src-tauri/src/db/: mod.rs
src-tauri/src/evm_indexer/: defi.rs  erc20.rs  mod.rs
src-tauri/src/indexer/: mod.rs
src-tauri/src/sync/: mod.rs
(+59 files in other folders)
