[package]
name = "numbers"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "numbers_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Ethereum/EVM dependencies
ethers = { version = "2.0", features = ["ws", "rustls"] }
web3 = "0.19"
ethabi = "18.0"
hex = "0.4"
rlp = "0.5"
ethereum-types = "0.14"
keccak-hash = "0.10"
sha3 = "0.10"
secp256k1 = { version = "0.29", features = ["recovery", "rand"] }

# Additional dependencies for the indexer
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
rust_decimal = "1.35"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# Substrate dependencies
sp-core = { version = "21.0", default-features = false, features = ["std"] }
subxt = "0.35"

# Database dependencies  
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }

# File handling dependencies
csv = "1.3"

